Fix overlaping

--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,12 @@ html, body {
 	letter-spacing:0;
 	color:white;
 	font-size:16px;
+
+	background: #3bd0ff;
 }
 
 
-body, .grad_green { 
+.grad_green { 
 	background-image:linear-gradient(-20deg, rgba(0, 255, 132.0000073313713, 1) 0%,rgba(157.0000058412552, 250.00000029802322, 247.00000047683716, 1) 49.47916567325592%,rgba(109.00000110268593, 201.00000321865082, 253.0000001192093, 1) 100%) ;
 }
 
@@ -57,11 +59,12 @@ h4 {
 }
 
 .h_100 {
-	height: 100%;
+	min-height: 100%;
 }
 
 /*.session {
 	border: solid yellow;
+	position: relative;
 }*/
 
 .content {
@@ -113,4 +116,9 @@ h4 {
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
 	header ul {display: none;}
+
+	.round_button {
+		font-size: 24px;
+		padding: 20px 32px;
+	}
 } 
